LU-6273 fld: update local FLDB in a separate thread

Do not do LWP register callback in the LWP setup thread,
otherwise the FLD update (in LWP callback) might happen
before it gets correct server nid, so mount process might
stuck there.

When upgrade DNE, OST should also retrieve the fld
entries from MDT0 during upgrade, because OST will have
regular FIDs object since 2.5. And OST needs to use
local FLD entries to check if the object is data or
metadata object.

Signed-off-by: wang di <di.wang@intel.com>
Change-Id: Ic0d89f1524ea0c1a3e7fc3833e16ecbad2123454